2007-10-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: fixed AC_FUNC_REALLOC cross-compile problem
	* doc/manual/news.texi: documented problem
	* doc/manual/bugs.texi: documented problem

2007-10-13  Brian Bidulock  <bidulock@openss7.org>

	* m4/lib32.m4: added macros for 32-bit lib checks
	* m4/perl.m4: added macros for embedded perl checks
	* m4/snmp.m4: added macros for ucd-snmp checks

2007-08-19  Brian Bidulock  <bidulock@openss7.org>

	* texi/install.texi: add bison and flex to dependencies
	* m4/openss7.m4: added defines for various directories

2007-08-15  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: GPLv3 updates
	* Makefile.am: GPLv3 updates
	* NEWS: GPLv3 updates
	* README: GPLv3 updates
	* README-cvs: GPLv3 updates
	* THANKS: GPLv3 updates
	* acinclude.m4: GPLv3 updates
	* configure.ac: GPLv3 updates
	* configure.nexusware: GPLv3 updates
	* openss7.macros: GPLv3 updates
	* openss7.refs: GPLv3 updates
	* openss7.spec.in: GPLv3 updates
	* debian/copyright: GPLv3 updates
	* debian/mscript_header.in: GPLv3 updates
	* debian/mscript_postinst.in: GPLv3 updates
	* debian/mscript_postrm.in: GPLv3 updates
	* debian/mscript_preinst.in: GPLv3 updates
	* debian/mscript_prerm.in: GPLv3 updates
	* debian/rules.in: GPLv3 updates
	* doc/Makefile.am: GPLv3 updates
	* doc/manual/Makefile.am: GPLv3 updates
	* doc/manual/news.texi: GPLv3 updates

2007-08-12  Brian Bidulock  <bidulock@openss7.org>

	* texi/gpl.texi: minor formatting change
	* texi/gpl3.texi: added version 3 license
	* texi/lgpl3.texi: added version 3 license
	* doc/manual/openss7.texi: GPLv3
	* am/openss7.am: added new tag macro expansions
	* scripts/Doxyfile.in: new extern replacements, GPLv3

	* scripts/Doxyfile.in: updated script headers
	* scripts/cflagcheck: updated script headers
	* scripts/check_commands: updated script headers
	* scripts/check_decls: updated script headers
	* scripts/check_headers: updated script headers
	* scripts/check_libs: updated script headers