@@ -1,6 +1,7 @@
 2007-10-16  Brian Bidulock  <bidulock@openss7.org>
 
 	* configure.ac: fixed AC_FUNC_REALLOC cross-compile problem
+	* Makefile.am: add missing EXTRA_SCRIPTS
 
 2007-08-15  Brian Bidulock  <bidulock@openss7.org>
 
